# cc22-3-book

./: README.md  pyproject.toml  requirements.txt
cc22-point-3/: _config.yml  _toc.yml  requirements.txt
cc22-point-3-senior/: _config.yml  _toc.yml
cc22-point-3-senior/_build/.doctrees/: environment.pickle
cc22-point-3-senior/_build/.doctrees/pages/: intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
cc22-point-3-senior/_build/html/: .buildinfo  genindex.html  objects.inv  search.html  searchindex.js
cc22-point-3-senior/_build/html/pages/: intro.html  markdown-notebooks.html  markdown.html  notebooks.html
cc22-point-3-senior/_build/jupyter_execute/pages/: notebooks.ipynb  notebooks.py
cc22-point-3-senior/pages/: notebooks.ipynb
cc22-point-3-senior/pages/contents_table/: outline.md
cc22-point-3-senior/pages/lesson_01/: index.md
cc22-point-3/_build/.doctrees/: environment.pickle  intro.doctree
cc22-point-3/_build/.doctrees/contents/: toc.doctree
cc22-point-3/_build/.doctrees/helpers/: hiding.doctree  layout.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
cc22-point-3/_build/html/: .buildinfo  genindex.html  intro.html  objects.inv  search.html  searchindex.js
cc22-point-3/_build/html/_static/: myscript.js
cc22-point-3/_build/html/contents/: toc.html
cc22-point-3/_build/html/helpers/: hiding.html  layout.html  markdown-notebooks.html  (+2 more)
cc22-point-3/contents/: toc.md
cc22-point-3/helpers/: notebooks.ipynb
quotes/: Computable Quotes-6064715.txt  bighugelabs.txt
resources/: README.md
(+22 files in other folders)
