[tool.poetry]
name = "cc22-3-book"
version = "0.1.0"
description = "jupyter book for cc22.3"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter-book = "^0.12.3"
katex = "^0.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
